Fix alignment

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -617,6 +617,7 @@ main {
         color: #1c1c1c;
         max-width: 260px;
         margin: 0 auto 30px;
+        min-height: 39px;
       }
       .work-mobile-img {
         width: 100%;
